--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "description": "Provides Commerce integration for Yandex Checkout.",
   "homepage": "",
   "require": {
-    "drupal/commerce": "~2.0",
-    "yandex-money/yandex-checkout-sdk-php": "*"
+    "drupal/commerce": "^2.14",
+    "yandex-money/yandex-checkout-sdk-php": "^1.5"
   }
 }
