--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "drupal/commerce_yandex_checkout",
   "type": "drupal-module",
   "description": "Provides Commerce integration for Yandex Checkout.",
-  "homepage": "",
+  "homepage": "https://github.com/davpsh/commerce_yandex_checkout",
   "require": {
     "drupal/commerce": "^2.14",
     "yandex-money/yandex-checkout-sdk-php": "^1.5"
