--- a/.travis.yml
+++ b/.travis.yml
@@ -92,4 +92,4 @@ before_script:
   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9515 http://localhost &
 
 script:
-  - $DRUPAL_BUILD_DIR/vendor/bin/phpunit -c $DRUPAL_BUILD_DIR/core/phpunit.xml.dist $TRAVIS_BUILD_DIR
+  - $DRUPAL_BUILD_DIR/vendor/bin/phpunit -c $DRUPAL_BUILD_DIR/core/phpunit.xml.dist --verbose $TRAVIS_BUILD_DIR
