--- a/yandex_checkout.info.yml
+++ b/yandex_checkout.info.yml
@@ -4,7 +4,7 @@ package: YandexCheckout
 type: module
 version: 1.0.2
 project: Commerce (contrib)
-core: 8.x
+core_version_requirement: ^8.7.7 || ^9
 dependencies:
   - commerce:commerce_payment
   - commerce:commerce_tax
