--- a/.travis.yml
+++ b/.travis.yml
@@ -60,7 +60,7 @@ install:
 
   # Copy the customized phpunit configuration file to the core directory so
   # the relative paths are correct.
-  - cp $DRUPAL_BUILD_DIR/modules/commerce_yandex_checkout/phpunit.xml.dist $DRUPAL_BUILD_DIR/core/phpunit.xml
+#  - cp $DRUPAL_BUILD_DIR/modules/commerce_yandex_checkout/phpunit.xml.dist $DRUPAL_BUILD_DIR/core/phpunit.xml
 
   # Bring in the module dependencies without requiring a merge plugin. The
   # require also triggers a full 'composer install'.
@@ -93,6 +93,6 @@ before_script:
   - google-chrome-stable --headless --disable-gpu --port=4444 --verbose http://localhost &
 
 script:
+  - $DRUPAL_BUILD_DIR/vendor/bin/phpunit -c core --group commerce_yandex_checkout --verbose $TRAVIS_BUILD_DIR
 #  - $DRUPAL_BUILD_DIR/vendor/bin/phpunit -c $DRUPAL_BUILD_DIR/core/phpunit.xml --verbose $TRAVIS_BUILD_DIR
-  - $DRUPAL_BUILD_DIR/vendor/bin/phpunit --verbose $TRAVIS_BUILD_DIR
   - phpcs --report=full --colors --standard="Drupal,DrupalPractice" --extensions="php,module,inc,install,test,profile,theme" $TRAVIS_BUILD_DIR
