Updates travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -93,6 +93,6 @@ before_script:
   - google-chrome-stable --headless --disable-gpu --port=4444 --verbose http://localhost &
 
 script:
-  - $DRUPAL_BUILD_DIR/vendor/bin/phpunit -c core --group commerce_yandex_checkout --verbose $TRAVIS_BUILD_DIR
+  - $DRUPAL_BUILD_DIR/vendor/bin/phpunit -c $DRUPAL_BUILD_DIR/core/phpunit.xml --group commerce_yandex_checkout --verbose $TRAVIS_BUILD_DIR
 #  - $DRUPAL_BUILD_DIR/vendor/bin/phpunit -c $DRUPAL_BUILD_DIR/core/phpunit.xml --verbose $TRAVIS_BUILD_DIR
   - phpcs --report=full --colors --standard="Drupal,DrupalPractice" --extensions="php,module,inc,install,test,profile,theme" $TRAVIS_BUILD_DIR
