--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
+dist: trusty
 language: php
-sudo: false
 
 php:
 #  - 7.3
@@ -20,12 +20,12 @@ env:
     - DRUPAL_BUILD_DIR=$TRAVIS_BUILD_DIR/../drupal
     - SIMPLETEST_DB=mysql://root:@127.0.0.1/drupal
     - PATH="$PATH:$HOME/.composer/vendor/bin"
-  matrix:
+  jobs:
 #    - DRUPAL_CORE=8.6.x
 #    - DRUPAL_CORE=8.7.x
     - DRUPAL_CORE=8.8.x
 
-matrix:
+jobs:
   fast_finish: true
 
 mysql:
@@ -58,10 +58,6 @@ install:
   # Reference the module in the build site.
   - ln -s $TRAVIS_BUILD_DIR $DRUPAL_BUILD_DIR/modules/commerce_yandex_checkout
 
-  # Copy the customized phpunit configuration file to the core directory so
-  # the relative paths are correct.
-#  - cp $DRUPAL_BUILD_DIR/modules/commerce_yandex_checkout/phpunit.xml.dist $DRUPAL_BUILD_DIR/core/phpunit.xml
-
   # Bring in the module dependencies without requiring a merge plugin. The
   # require also triggers a full 'composer install'.
   - composer --working-dir=$DRUPAL_BUILD_DIR require drupal/commerce:^2.14
@@ -87,11 +83,12 @@ install:
   - export SIMPLETEST_BASE_URL=http://localhost:8888
 
 before_script:
-  # include ChromeDriver in PATH
-  #- ln --symbolic /usr/lib/chromium-browser/chromedriver "${HOME}/bin/chromedriver"
-  # start Chrome and listen on localhost
-  - google-chrome-stable --headless --disable-gpu --port=4444 --verbose http://localhost &
+  - google-chrome-stable --headless --disable-gpu --no-sandbox --remote-debugging-port=9222 http://localhost &
+  - export MINK_DRIVER_ARGS_WEBDRIVER='["chrome", {"browserName":"chrome","chromeOptions":{"args":["--disable-gpu","--headless","--no-sandbox","--disable-dev-shm-usage","--disable-extensions"]}}, "http://localhost:9515"]'
+  - chromedriver &
 
 script:
+  - pwd
+  - $DRUPAL_BUILD_DIR/vendor/bin/phpunit --configuration $DRUPAL_BUILD_DIR/core --group commerce_yandex_checkout
   - $DRUPAL_BUILD_DIR/vendor/bin/phpunit -c $DRUPAL_BUILD_DIR/core/phpunit.xml --verbose $TRAVIS_BUILD_DIR
   - phpcs --report=full --colors --standard="Drupal,DrupalPractice" --extensions="php,module,inc,install,test,profile,theme" $TRAVIS_BUILD_DIR
