--- a/.travis.yml
+++ b/.travis.yml
@@ -88,6 +88,5 @@ before_script:
   - chromedriver &
 
 script:
-  - pwd
-  - $DRUPAL_BUILD_DIR/vendor/bin/phpunit --configuration $DRUPAL_BUILD_DIR/core --group commerce_yandex_checkout
+  - $DRUPAL_BUILD_DIR/vendor/bin/phpunit --configuration $DRUPAL_BUILD_DIR/core --group commerce_yandex_checkout --verbose
   - phpcs --report=full --colors --standard="Drupal,DrupalPractice" --extensions="php,module,inc,install,test,profile,theme" $TRAVIS_BUILD_DIR
