--- a/.travis.yml
+++ b/.travis.yml
@@ -75,12 +75,15 @@ install:
       then composer --working-dir=$DRUPAL_BUILD_DIR run-script drupal-phpunit-upgrade;
     fi
 
-  # Start a web server on port 8888, run in the background; wait for
-  # initialization.
-  - nohup php -S localhost:8888 > /dev/null 2>&1 &
+  # Start a web server on port 8080 in the background.
+  - nohup php -S localhost:8080 > /dev/null 2>&1 &
 
-  # Export web server URL for browser tests.
-  - export SIMPLETEST_BASE_URL=http://localhost:8888
+  # Wait until the web server is responding.
+  - until curl -s localhost:8080; do true; done > /dev/null
+
+  - export SIMPLETEST_DB='mysql://root:@localhost/drupal'
+  - export SIMPLETEST_BASE_URL='http://localhost:8080'
+  - export SYMFONY_DEPRECATIONS_HELPER='disabled'
 
   # Install Chromedriver.
   - mkdir travis-chromedriver
