--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,12 @@ env:
 jobs:
   fast_finish: true
 
+mysql:
+  database: drupal
+  username: root
+  encoding: utf8
+
+
 # Cache composer downloads.
 cache:
   directories:
