--- a/.travis.yml
+++ b/.travis.yml
@@ -69,9 +69,9 @@ install:
   # Reference $MODULE in build site.
   - ln -s $TESTDIR modules/$MODULE
 
-  - composer --working-dir=$DRUPAL_BUILD_DIR require behat/mink:^1.7
-  - composer --working-dir=$DRUPAL_BUILD_DIR require behat/mink-goutte-driver:^1.2
-  - composer --working-dir=$DRUPAL_BUILD_DIR require behat/mink-selenium2-driver:^1.3
+#  - composer --working-dir=$DRUPAL_BUILD_DIR require behat/mink:^1.7
+#  - composer --working-dir=$DRUPAL_BUILD_DIR require behat/mink-goutte-driver:^1.2
+#  - composer --working-dir=$DRUPAL_BUILD_DIR require behat/mink-selenium2-driver:^1.3
 
   # Bring in the module dependencies without requiring a merge plugin. The
   # require also triggers a full 'composer install'.
