--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ env:
     - SYMFONY_DEPRECATIONS_HELPER='disabled'
     - DOCKER_COMPOSE_VERSION=1.26.2
   jobs:
-    - DRUPAL_CORE=8.6.x
+#    - DRUPAL_CORE=8.6.x
     - DRUPAL_CORE=8.7.x
 #    - DRUPAL_CORE=8.8.x
 
@@ -75,6 +75,7 @@ install:
 
   # Bring in the module dependencies without requiring a merge plugin. The
   # require also triggers a full 'composer install'.
+  - export COMPOSER_MEMORY_LIMIT=-1
   - composer --working-dir=$DRUPAL_BUILD_DIR require drupal/commerce:^2.14
   - composer --working-dir=$DRUPAL_BUILD_DIR require yandex-money/yandex-checkout-sdk-php:^1.5
 
