--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ env:
     - DOCKER_COMPOSE_VERSION=1.26.2
   jobs:
 #    - DRUPAL_CORE=8.6.x
-    - DRUPAL_CORE=8.7.x
-#    - DRUPAL_CORE=8.8.x
+#    - DRUPAL_CORE=8.7.x
+    - DRUPAL_CORE=8.8.x
 
 jobs:
   fast_finish: true
@@ -112,4 +112,4 @@ before_script:
 
 script:
   - $DRUPAL_BUILD_DIR/vendor/bin/phpunit --configuration $DRUPAL_BUILD_DIR/core --group $MODULE --verbose
-  - phpcs --report=full --colors --standard="Drupal,DrupalPractice" --extensions="php,module,inc,install,test,profile,theme" $TESTDIR
+  - phpcs --report=full --colors --standard="Drupal,DrupalPractice" --extensions="php,module,inc,install,profile,theme" $TESTDIR
