Updates travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,19 +11,17 @@ addons:
 
 services:
   - mysql
-  - docker
 
 env:
   global:
     - MODULE=commerce_yandex_checkout
     - PATH="$PATH:$HOME/.composer/vendor/bin"
     - SYMFONY_DEPRECATIONS_HELPER='disabled'
-    - DOCKER_COMPOSE_VERSION=1.26.2
   jobs:
 #    - DRUPAL_CORE=8.6.x
 #    - DRUPAL_CORE=8.7.x
-#    - DRUPAL_CORE=8.8.x
-    - DRUPAL_CORE=8.9.x
+    - DRUPAL_CORE=8.8.x
+#    - DRUPAL_CORE=8.9.x
 
 jobs:
   fast_finish: true
@@ -36,21 +34,17 @@ cache:
 before_install:
   # Disable xdebug.
   - phpenv config-rm xdebug.ini
+
   # Update composer.
   - composer self-update
+
+  - export COMPOSER_MEMORY_LIMIT=-1
 
   - composer global require "hirak/prestissimo:^0.3"
   - composer global require "drupal/coder:8.3.*"
   - phpcs --config-set installed_paths $HOME/.composer/vendor/drupal/coder/coder_sniffer
 
-  - sudo rm /usr/local/bin/docker-compose
-  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
-  - chmod +x docker-compose
-  - sudo mv docker-compose /usr/local/bin
-
 install:
-#  - docker-compose up -d --build
-
   # Remember the current entity test directory for later use in the Drupal installation.
   - TESTDIR=$(pwd)
   # Navigate out of module directory to prevent blown stack by recursive module lookup.
@@ -61,7 +55,7 @@ install:
   # Export web server URL for browser tests.
   - export SIMPLETEST_DB=mysql://root:@127.0.0.1/$MODULE
 
-  # Download Drupal 8 core.
+  # Download Drupal core.
   - travis_retry git clone --depth=1 --branch $DRUPAL_CORE https://git.drupal.org/project/drupal.git
   - cd drupal
   # Store the path to Drupal root.
@@ -70,13 +64,13 @@ install:
   # Reference $MODULE in build site.
   - ln -s $TESTDIR modules/$MODULE
 
-#  - composer --working-dir=$DRUPAL_BUILD_DIR require behat/mink:^1.7
-#  - composer --working-dir=$DRUPAL_BUILD_DIR require behat/mink-goutte-driver:^1.2
-#  - composer --working-dir=$DRUPAL_BUILD_DIR require behat/mink-selenium2-driver:^1.3
-
   # Bring in the module dependencies without requiring a merge plugin. The
   # require also triggers a full 'composer install'.
-  - export COMPOSER_MEMORY_LIMIT=-1
+
+  - composer --working-dir=$DRUPAL_BUILD_DIR require behat/mink:^1.7
+  - composer --working-dir=$DRUPAL_BUILD_DIR require behat/mink-goutte-driver:^1.2
+  - composer --working-dir=$DRUPAL_BUILD_DIR require behat/mink-selenium2-driver:^1.3
+
   - composer --working-dir=$DRUPAL_BUILD_DIR require drupal/commerce:^2.14
   - composer --working-dir=$DRUPAL_BUILD_DIR require yandex-money/yandex-checkout-sdk-php:^1.5
 
@@ -109,7 +103,6 @@ before_script:
   - google-chrome-stable --headless --disable-gpu --no-sandbox --remote-debugging-port=9222 http://localhost &
   - export MINK_DRIVER_ARGS_WEBDRIVER='["chrome", {"browserName":"chrome","chromeOptions":{"args":["--disable-gpu","--headless","--no-sandbox","--disable-dev-shm-usage","--disable-extensions"]}}, "http://localhost:9515"]'
   - chromedriver &
-#  - export MINK_DRIVER_ARGS_WEBDRIVER='["chrome", {"browserName":"chrome","chromeOptions":{"args":["--disable-gpu","--headless","--no-sandbox","--disable-dev-shm-usage","--disable-extensions"]}}, "http://localhost:9515"]'
 
 script:
   - $DRUPAL_BUILD_DIR/vendor/bin/phpunit --configuration $DRUPAL_BUILD_DIR/core --group $MODULE --verbose
