--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "drupal/commerce_yandex_checkout",
+    "name": "drupal/commerce_yookassa",
     "type": "drupal-module",
-    "description": "Provides Commerce integration for Yandex Checkout.",
+    "description": "Provides Commerce integration for YooKassa.",
     "homepage": "https://github.com/davpsh/commerce_yandex_checkout",
     "require": {
         "drupal/commerce": "^2.14",
-        "yandex-money/yandex-checkout-sdk-php": "^1.5"
+        "yoomoney/yookassa-sdk-php": "^2.0"
     }
 }
